06.2-Gateway API/4.weighted/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weighted
  labels:
    app: paytam
