06.2-Gateway API/4.weighted/deploy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paytam-v1
  namespace: weighted
  labels:
    app: paytam
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paytam
      version: v1
  template:
    metadata:
      labels:
        app: paytam
        version: v1
    spec:
      serviceAccountName: paytam-sa
      containers:
        - name: paytam
          image: yaswanth111/paytam:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
