06.2-Gateway API/4.weighted/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paytam-v2
  namespace: weighted
  labels:
    app: paytam
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paytam
      version: v2
  template:
    metadata:
      labels:
        app: paytam
        version: v2
    spec:
      serviceAccountName: paytam-sa
      containers:
        - name: paytam
          image: yaswanth111/swiggy:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
