06.2-Gateway API/4.weighted/svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: paytam-svc-v1
  namespace: weighted
  labels:
    app: paytam
    version: v1
spec:
  type: ClusterIP
  selector:
    app: paytam
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
