06.2-Gateway API/4.weighted/svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: paytam-svc-v2
  namespace: weighted
  labels:
    app: paytam
    version: v2
spec:
  type: ClusterIP
  selector:
    app: paytam
    version: v2
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
